[package]
name = "orga-macros"
version = "0.3.1"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2021"
description = "Macros for the orga crate"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
